Isabelle2007.  Potential INCOMPATIBILITY, ``hide const c'' really
makes c inaccessible; consider using ``hide (open) const c'' instead.

* Removed exotic 'token_translation' command.  INCOMPATIBILITY, use ML
interface instead.

* There is a new syntactic category "float_const" for signed decimal
fractions (e.g. 123.45 or -123.45).


*** Pure ***

* Type Binding.T gradually replaces formerly used type bstring for names
to be bound.  Name space interface for declarations has been simplified:

  NameSpace.declare: NameSpace.naming
    -> Binding.T -> NameSpace.T -> string * NameSpace.T
  NameSpace.bind: NameSpace.naming
    -> Binding.T * 'a -> 'a NameSpace.table -> string * 'a NameSpace.table
         (*exception Symtab.DUP*)

See further modules src/Pure/General/binding.ML and
src/Pure/General/name_space.ML

* Module moves in repository:
    src/Pure/Tools/value.ML ~> src/Tools/
    src/Pure/Tools/quickcheck.ML ~> src/Tools/

* Slightly more coherent Pure syntax, with updated documentation in
isar-ref manual.  Removed locales meta_term_syntax and
meta_conjunction_syntax: TERM and &&& (formerly &&) are now permanent,
INCOMPATIBILITY in rare situations.

* Goal-directed proof now enforces strict proof irrelevance wrt. sort
hypotheses.  Sorts required in the course of reasoning need to be
covered by the constraints in the initial statement, completed by the
type instance information of the background theory.  Non-trivial sort
hypotheses, which rarely occur in practice, may be specified via
vacuous propositions of the form SORT_CONSTRAINT('a::c).  For example:

  lemma assumes "SORT_CONSTRAINT('a::empty)" shows False ...

The result contains an implicit sort hypotheses as before --
SORT_CONSTRAINT premises are eliminated as part of the canonical rule
normalization.

* Changed defaults for unify configuration options:

  unify_trace_bound = 50 (formerly 25)
  unify_search_bound = 60 (formerly 30)

* Different bookkeeping for code equations: